<resources>
    <string name="app_name">PDF Reader</string>
    <string name="title_about">About</string>
    <string name="policy">Privacy Policy</string>
    <string name="title_rate">Rate</string>
    <string name="title_resume">Rename</string>
    <string name="title_share">Share</string>
    <string name="title_delete">Delete</string>
    <string name="title_detail">Detail</string>
    <string name="message_delete">Do you want to delete this file?</string>
    <string name="hintSearch">Search...</string>
    <string name="no_data">No Data</string>
    <string name="no_result">No Result</string>
    <string name="title_pagged">Paged</string>
    <string name="title_scrolled">Scrolled</string>
    <string name="title_reversed">Reversed</string>
    <string name="rename">Rename</string>
    <string name="masageRename">Please enter a new name for the item</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="version">Version: %d</string>
    <string name="message_exit">Please click BACK again to exit</string>
    <string name="title_about_one">PDF Reader for Android provides users with excellent reading, annotation features fpr PDF documents. Simple and easy to use, just as you see.</string>
    <string name="title_about_tow">For more information, please contact us by email: vietmobi@gmail.com</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="title_rate_five">Rate 5 Star</string>
    <string name="title_more_app">More App</string>
    <string name="title_policy">Privacy policy</string>
    <string name="title_rate_us">Rate Us</string>
    <string name="title_horizontal">Horizontal</string>
    <string name="title_vertical">Vertical</string>
    <string name="message_rate">Thank you for using our application, please rate us for product improvement.</string>
    <string name="pdf">PDF</string>
    <string name="reader">READER</string>
    <string name="title_share_app">Share App</string>
    <string name="information">Infomation</string>

    <string name="cannot_open_buffer">Cannot open buffer.</string>
    <string name="cannot_open_document">The file cannot be opened, please check the file format is correct.</string>
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="choose_value">Select value</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copy_text">Copy text</string>
    <string name="dialog_title">Prompt</string>
    <string name="dismiss">Determine</string>
    <string name="document_has_changes_save_them">The file has been modified. Is it saved?</string>
    <string name="enter_password">Enter password</string>
    <string name="fill_out_text_field">Fill in text fields</string>
    <string name="no">No</string>
    <string name="no_further_occurrences_found">No more found</string>
    <string name="no_text_selected">No text selected</string>
    <string name="not_supported">not support</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="okay">OK</string>
    <string name="pdf_tools_accept">Accept</string>
    <string name="pdf_tools_copy">Copy</string>
    <string name="pdf_tools_delete">Delete</string>
    <string name="pdf_tools_draw_annotation">Please draw</string>
    <string name="pdf_tools_highlight">Highlight</string>
    <string name="pdf_tools_ink">Hand Painted</string>
    <string name="pdf_tools_outline_title">Table of Contents</string>
    <string name="pdf_tools_search">Please enter what to search</string>
    <string name="pdf_tools_search_backwards">Search backwards</string>
    <string name="pdf_tools_search_document">Search document</string>
    <string name="pdf_tools_search_forwards">Search forwards</string>
    <string name="pdf_tools_strike_out">Strike through</string>
    <string name="pdf_tools_toggle_links">Highlight and enable links</string>
    <string name="pdf_tools_toggle_reflow_mode" translatable="false">Toggle reflow mode</string>
    <string name="pdf_tools_underline">Underline</string>
    <string name="searching">Searching…</string>
    <string name="select_certificate_and_sign">Select certificate and sign?</string>
    <string name="select_text">Please select text</string>
    <string name="signature_checked">Signature checked</string>
    <string name="text_not_found">Content not found</string>
    <string name="yes">Yes</string>
    <string name="links">Links</string>
    <string name="search">Search</string>
    <string name="out_line">Out line</string>
    <string name="edt_text">Edit text</string>
    <string name="message_no_support">Page can not support!</string>
    <string name="add_picture">Add picture</string>
    <string name="move_picture">Move picture</string>
    <string name="message_add_pic">Insert image successfully!</string>
    <string name="message_func">This feature is under development!</string>
    <string name="message_wait">Please wait until the file opening process is completed!</string>
</resources>
