<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/horizontal"
        android:title="@string/title_horizontal"
        android:icon="@drawable/ic_horizontal"/>

    <item
        android:id="@+id/moreButton"
        android:title="@string/copy_text"
        android:icon="@drawable/ic_copy_tool"/>

    <item
        android:id="@+id/searchButton"
        android:title="@string/search"
        android:icon="@drawable/ic_search_tool"/>

    <item
        android:id="@+id/outlineButton"
        android:title="@string/out_line"
        android:icon="@drawable/ic_menu_tool"/>

    <item
        android:id="@+id/reflowButton"
        android:title="@string/edt_text"
        android:icon="@drawable/ic_pen_tool"/>

<!--    <item-->
<!--        android:id="@+id/linkButton"-->
<!--        android:title="@string/links"-->
<!--        android:icon="@drawable/ic_link_tool"/>-->

<!--    <item-->
<!--        android:id="@+id/picture"-->
<!--        android:title="@string/add_picture"-->
<!--        android:icon="@drawable/ic_picture"/>-->
</menu>