<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ViewAnimator
        android:id="@+id/switcher"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkTrans">

            <ImageButton
                android:id="@+id/linkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_toStartOf="@+id/reflowButton"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/pdf_tools_toggle_links"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_link_variant_white_48dp" />

            <ImageButton
                android:id="@+id/reflowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_toStartOf="@+id/outlineButton"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/pdf_tools_toggle_reflow_mode"
                android:onClick="OnEditAnnotButtonClick"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_pencil_white_48dp" />

            <ImageButton
                android:id="@+id/outlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_toStartOf="@+id/searchButton"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/pdf_tools_outline_title"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_list" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_toStartOf="@+id/moreButton"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/pdf_tools_search_document"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_search_white_48dp" />

            <ImageButton
                android:id="@+id/moreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/pdf_tools_copy"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_content_copy_white_48dp" />

        </RelativeLayout>

        <!--搜索框-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorDarkTrans">

            <com.pdfreader.editor.font.ImageViewCustom
                android:id="@+id/cancelSearch"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:padding="10dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/cancel"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_close_white_48dp" />

            <EditText
                android:id="@+id/searchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/searchBack"
                android:layout_toEndOf="@+id/cancelSearch"
                android:hint="@string/pdf_tools_search"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/text_normal"
                android:textColorHint="@color/text_normalTrans" />

            <com.pdfreader.editor.font.ImageViewCustom
                android:id="@+id/searchBack"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:padding="10dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/searchForward"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/pdf_tools_search_backwards"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_left_white_48dp" />

            <com.pdfreader.editor.font.ImageViewCustom
                android:id="@+id/searchForward"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:padding="10dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/pdf_tools_search_forwards"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_right_white_48dp" />

        </RelativeLayout>

        <!--注释-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorDarkTrans">

            <com.pdfreader.editor.font.ImageViewCustom
                android:id="@+id/img_cancelEdt"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/cancel"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_close_white_48dp" />

            <com.pdfreader.editor.font.ImageViewCustom
                android:id="@+id/img_highlightEdt"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_centerVertical="true"
                android:padding="9dp"
                android:layout_toStartOf="@+id/img_underLineEdt"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/pdf_tools_highlight"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_format_color_fill_white_48dp" />

            <com.pdfreader.editor.font.ImageViewCustom
                android:id="@+id/img_underLineEdt"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_centerVertical="true"
                android:padding="9dp"
                android:layout_toStartOf="@+id/img_strikeOutEdt"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/pdf_tools_underline"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_format_vertical_align_bottom_white_48dp" />

            <com.pdfreader.editor.font.ImageViewCustom
                android:id="@+id/img_strikeOutEdt"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_centerVertical="true"
                android:padding="9dp"
                android:layout_toStartOf="@+id/img_inkEdt"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/pdf_tools_strike_out"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_format_vertical_align_center_white_48dp" />

            <com.pdfreader.editor.font.ImageViewCustom
                android:id="@+id/img_inkEdt"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/pdf_tools_ink"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_pencil_white_48dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorDarkTrans">

           <com.pdfreader.editor.font.ImageViewCustom
                android:id="@+id/cancelDeleteButton"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/cancel"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_close_white_48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/deleteButton"
                android:layout_toEndOf="@+id/cancelDeleteButton"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/pdf_tools_delete"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/pdf_tools_delete"
                android:onClick="OnDeleteButtonClick"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_delete_white_48dp" />

        </RelativeLayout>

        <!--标记中各功能取消确定-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorDarkTrans">

            <com.pdfreader.editor.font.ImageViewCustom
                android:id="@+id/cancelAcceptButton"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/cancel"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_close_white_48dp" />

            <TextView
                android:id="@+id/annotType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/acceptButton"
                android:layout_toEndOf="@+id/cancelAcceptButton"
                android:gravity="center"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF" />

            <com.pdfreader.editor.font.ImageViewCustom
                android:id="@+id/acceptButton"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:background="@drawable/pdf_tools_btn_bg"
                android:contentDescription="@string/pdf_tools_accept"
                android:onClick="OnAcceptButtonClick"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_check_white_48dp" />
        </RelativeLayout>
    </ViewAnimator>
</RelativeLayout>
