<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="32dp"
    android:gravity="center"
    android:background="@color/material">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_rename"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.pdfreader.editor.font.BoldCustomTextview
            android:id="@+id/font_UTMAvo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/rename"
            android:textColor="@color/color_red_09"
            android:textSize="@dimen/font_size_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <com.pdfreader.editor.font.CustomTextView
            android:id="@+id/font_UTMAvo3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/masageRename"
            android:textColor="@color/colorGray_09"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/font_UTMAvo2" />

        <com.pdfreader.editor.font.CustomEditTextFonts
            android:id="@+id/edit_rename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/font_UTMAvo3">

        </com.pdfreader.editor.font.CustomEditTextFonts>


        <com.pdfreader.editor.font.CustomTextView
            android:id="@+id/btn_canel_rename"
            android:layout_width="74dp"
            android:layout_height="36dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:background="@drawable/button_state_click_cancel"
            android:text="@string/cancel"
            android:textColor="@color/colorGray_09"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_ok_rename"
            app:layout_constraintTop_toBottomOf="@+id/edit_rename">
        </com.pdfreader.editor.font.CustomTextView>

        <com.pdfreader.editor.font.CustomTextView
            android:id="@+id/btn_ok_rename"
            android:layout_width="74dp"
            android:layout_height="36dp"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_state_click_ok"
            android:text="@string/ok"
            android:textColor="@color/colorBlue_06"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_rename">
        </com.pdfreader.editor.font.CustomTextView>
    </androidx.constraintlayout.widget.ConstraintLayout>






</FrameLayout>