<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/nav_header" />

    <LinearLayout
        android:id="@+id/linear_share"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_state_click"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_share" />

        <com.pdfreader.editor.font.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title_share_app"
            android:textColor="@color/color_gray_005"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_rate"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/bg_state_click"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_share">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_rate" />

        <com.pdfreader.editor.font.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title_rate_five"
            android:textColor="@color/color_gray_005"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_moreApp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/bg_state_click"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_rate">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_more_app" />

        <com.pdfreader.editor.font.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title_more_app"
            android:textColor="@color/color_gray_005"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_policy"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/bg_state_click"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_moreApp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_policy" />

        <com.pdfreader.editor.font.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title_policy"
            android:textColor="@color/color_gray_005"
            android:textSize="18sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>